syntax = "proto3";

package product;

service ProductService {
  rpc CreateCompany (CreateCompanyRequest) returns (CompanyResponse);
  rpc GetCompany (GetCompanyRequest) returns (CompanyResponse);
  rpc ListCompanies (ListCompaniesRequest) returns (ListCompaniesResponse);

  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc GetProductsByCompany (GetProductsByCompanyRequest) returns (ListProductsResponse);
}

message CreateCompanyRequest {
  string name = 1;
  string description = 2;
  string ownerId = 3;
}

message GetCompanyRequest {
  string id = 1;
}

message ListCompaniesRequest {
  string ownerId = 1;
}

message CompanyResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string ownerId = 4;
}

message ListCompaniesResponse {
  repeated CompanyResponse companies = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  repeated string images = 4;
  string category = 5;
  string companyId = 6;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {
  string category = 1;
}

message GetProductsByCompanyRequest {
  string companyId = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  repeated string images = 5;
  string category = 6;
  string companyId = 7;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
}
